--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -16,148 +16,157 @@
         android:src="@drawable/back_settings"/>
 
     <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_width="350dp"
-        android:layout_height="400dp"
+        android:layout_marginVertical="40dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:background="@drawable/subsettings_rounded"
         >
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:columnCount="2"
-            >
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="35dp"
-                android:gravity="center"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/allow"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                />
+                android:layout_weight="1"/>
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="40dp"
-                android:src="@drawable/toggle_off" />
+            <androidx.appcompat.widget.SwitchCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:thumbTint="@color/main"
+                app:trackTint="@color/black"/>
+        </LinearLayout>
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/toggle_circle" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="29dp"
-                android:gravity="left"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/post"
-                android:textSize="15dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                />
+                android:layout_weight="1"/>
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/toggle_circle" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/main"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="29dp"
-                android:gravity="left"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/reply"
-                android:textSize="15dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/toggle_circle" />
+                android:layout_weight="1"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/main"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="29dp"
-                android:gravity="left"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/msg"
-                android:textSize="15dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                />
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="20dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/toggle_circle" />
+                android:layout_weight="1"/>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/main"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="29dp"
-                android:gravity="left"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/listing"
-                android:textSize="15dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                />
+                android:layout_weight="1"/>
 
-        </GridLayout>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/main"/>
+        </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="350dp"
-        android:layout_height="100dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:background="@drawable/subsettings_rounded"
         >
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:columnCount="2"
-            >
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:gravity="center">
 
             <TextView
-                android:layout_marginTop="35dp"
-                android:gravity="center"
-                android:layout_columnWeight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/vibrate"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                />
+                android:layout_weight="1"/>
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_columnWeight="1"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/toggle_off" />
-
-        </GridLayout>
+            <androidx.appcompat.widget.SwitchCompat
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:thumbTint="@color/main"
+                app:trackTint="@color/black"/>
+        </LinearLayout>
 
     </LinearLayout>
 
